--- a/style2.css
+++ b/style2.css
@@ -98,6 +98,8 @@ nav a:hover,.active{
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	background-color: rgba(0, 0, 0, 0.4);
+	backdrop-filter: blur(5px);
 }
 .modal-box .modal-dialog{
 	padding: 10px 10px 30px 10px;
@@ -167,6 +169,8 @@ text-align: center;
 	align-items: center;
 }
 
+
+/* HandPhone  */
 @media (max-width: 576px){
 
 	.box input{
@@ -179,19 +183,21 @@ text-align: center;
 
 	}
 	nav {
-		font-size: 14px;
+		font-size: 13px;
+		height: 7vh;
 	}
 	.box-2{ 
 		justify-content: center;
 	}
 	.modal-box{
-		align-items: unset;
+		align-items: center;
 	}
 
 	.modal-box .modal-dialog{
+/*		margin-top: 10%;*/
 		padding: 10px 10px 30px 10px;
-		width:100%; 
-		height: 55vh;
+		width:80%; 
+		height: 60%;
 		border-radius: 5px;
 		padding-bottom: none;
 	}
